--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
        
     </nav>
-    
+
     <section id="thoughts">
         <div>
             <h2> STUDENT THOUGHT</h2>
@@ -80,7 +80,7 @@
     </section>
 
 
-    <footer id="contact">
+    <section id="contact">
 
         <div class="conatct-us">
             <form action="python.backend">
@@ -105,6 +105,12 @@
             <div>
                 <button>search</button>
             </div>
+        </div>
+    </section>
+
+    <footer>
+        <div class="center">
+            Copyright &copy; WWW.iEducation.com All rights are reserve
         </div>
     </footer>
 
